SERVER-99673 Ensure CBR can estimate plans over empty collections (#31454)

GitOrigin-RevId: 7cc48a3865855340e9cb99882652fa9626554c12